finally make bfs directly comparable to Q_learning

--- a/heisenberg_group/Data_Generation/generate_heisenberg_w_BFS.ipynb
+++ b/heisenberg_group/Data_Generation/generate_heisenberg_w_BFS.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,13 +30,13 @@
     "\n",
     "def apply_mat(mat, index):\n",
     "    if index==0:\n",
-    "        return A @ mat\n",
+    "        return mat @ A\n",
     "    elif index==1:\n",
-    "        return B @ mat\n",
+    "        return mat @ B\n",
     "    elif index==2:\n",
-    "        return C @ mat\n",
+    "        return mat @ C\n",
     "    elif index==3:\n",
-    "        return D @ mat\n",
+    "        return mat @ D\n",
     "    assert(1==2)\n",
     "\n",
     "# B is the inverse of A\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "0   0.0   0.0   0.0          0.0        0.0"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -232,41 +232,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-6.0</td>\n",
-       "      <td>-52.0</td>\n",
-       "      <td>-14.0</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>28.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>-62.0</td>\n",
-       "      <td>-13.0</td>\n",
-       "      <td>28.0</td>\n",
+       "      <td>-24.0</td>\n",
+       "      <td>45.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-4.0</td>\n",
-       "      <td>-70.0</td>\n",
-       "      <td>-12.0</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>28.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>-26.0</td>\n",
        "      <td>-3.0</td>\n",
-       "      <td>-76.0</td>\n",
-       "      <td>-11.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>28.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-2.0</td>\n",
-       "      <td>-80.0</td>\n",
-       "      <td>-10.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>-8.0</td>\n",
        "      <td>28.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -279,7 +279,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>246244</th>\n",
+       "      <th>255581</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.0</td>\n",
@@ -287,7 +287,7 @@
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>246245</th>\n",
+       "      <th>255582</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -295,7 +295,7 @@
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>246246</th>\n",
+       "      <th>255583</th>\n",
        "      <td>-1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -303,7 +303,7 @@
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>246247</th>\n",
+       "      <th>255584</th>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -311,7 +311,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>246248</th>\n",
+       "      <th>255585</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -320,27 +320,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>246249 rows × 5 columns</p>\n",
+       "<p>255586 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        val1  val2  val3  num_steps  last_matrix\n",
-       "0       -6.0 -52.0 -14.0       28.0          0.0\n",
-       "1       -5.0 -62.0 -13.0       28.0          0.0\n",
-       "2       -4.0 -70.0 -12.0       28.0          0.0\n",
-       "3       -3.0 -76.0 -11.0       28.0          0.0\n",
-       "4       -2.0 -80.0 -10.0       28.0          0.0\n",
+       "0      -23.0  66.0  -1.0       28.0          3.0\n",
+       "1      -24.0  45.0   0.0       28.0          3.0\n",
+       "2      -25.0  22.0   1.0       28.0          3.0\n",
+       "3      -26.0  -3.0   2.0       28.0          1.0\n",
+       "4       -2.0  89.0  -8.0       28.0          0.0\n",
        "...      ...   ...   ...        ...          ...\n",
-       "246244   0.0   0.0  -1.0        1.0          3.0\n",
-       "246245   0.0   0.0   1.0        1.0          2.0\n",
-       "246246  -1.0   0.0   0.0        1.0          1.0\n",
-       "246247   1.0   0.0   0.0        1.0          0.0\n",
-       "246248   0.0   0.0   0.0        0.0          0.0\n",
+       "255581   0.0   0.0  -1.0        1.0          3.0\n",
+       "255582   0.0   0.0   1.0        1.0          2.0\n",
+       "255583  -1.0   0.0   0.0        1.0          1.0\n",
+       "255584   1.0   0.0   0.0        1.0          0.0\n",
+       "255585   0.0   0.0   0.0        0.0          0.0\n",
        "\n",
-       "[246249 rows x 5 columns]"
+       "[255586 rows x 5 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,23 +352,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(246249, 5)\n"
+      "(255586, 5)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(246249, 5)"
+       "(255586, 5)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
