use built-in loss fns, prevent value exploding from penalties

--- a/Euclidean/Alex/deep_mcts.ipynb
+++ b/Euclidean/Alex/deep_mcts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "d12017b9641b3200",
    "metadata": {
     "ExecuteTime": {
@@ -55,6 +55,7 @@
     "        self.depth = depth\n",
     "        self.children = [None] * n_children\n",
     "        self.is_terminal = terminal(self.state)\n",
+    "        self.value = value\n",
     "        self.subtree_value = torch.zeros(1)\n",
     "\n",
     "    def __str__(self):\n",
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "id": "8031c754a4dbbeae",
    "metadata": {
     "ExecuteTime": {
@@ -125,16 +126,17 @@
     "        # if unexplored or non-terminal, get value\n",
     "        state = torch.tensor(self.actions[i](node.state.flatten()), dtype=torch.float)\n",
     "        state = state.reshape(node.state.shape)\n",
-    "        child_val = self.value_fn(state) - node.depth - 1  # give penalty -1 for each additional step taken\n",
+    "        # child_val = self.value_fn(state) - node.depth - 1  # give penalty -1 for each additional step taken\n",
+    "        child_val = self.value_fn(state)\n",
     "        child_val = child_val.flatten()[0]\n",
     "        node.children[i] = Node(node, state, len(self.actions), value=child_val, depth=node.depth+1)\n",
     "\n",
     "        # if new Node is terminal, take it as the tree's terminal if it takes less time to reach than current terminal\n",
-    "        if node.children[i].is_terminal:\n",
-    "            # if terminal, add reward of ||start_vec||_2^2\n",
-    "            node.children[i].value += torch.linalg.vector_norm(torch.square(self.root.state)).item()\n",
-    "            if self.terminal is None or node.children[i].depth < self.terminal.depth:\n",
-    "                self.terminal = node.children[i]\n",
+    "        # if node.children[i].is_terminal:\n",
+    "        #     # if terminal, add reward of ||start_vec||_2^2\n",
+    "        #     node.children[i].value += torch.linalg.vector_norm(torch.square(self.root.state)).item()\n",
+    "        #     if self.terminal is None or node.children[i].depth < self.terminal.depth:\n",
+    "        #         self.terminal = node.children[i]\n",
     "\n",
     "        if node.children[i].depth > self.max_depth:\n",
     "            self.max_depth = node.children[i].depth\n",
@@ -198,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "438fdf1c04168299",
    "metadata": {
     "collapsed": false
@@ -208,8 +210,10 @@
     "class Loss(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(Loss, self).__init__()\n",
+    "        self.v_loss_fn = torch.nn.MSELoss()\n",
+    "        self.p_loss_fn = torch.nn.CrossEntropyLoss()\n",
     "        \n",
-    "    def forward(self, v_out, p_out, p_sampled, success, steps, init_state):\n",
+    "    def forward(self, v_out, v_target, p_out, p_target):\n",
     "        \"\"\"\n",
     "        Loss function designed to reward successful game completion while taking the least amount of steps possible\n",
     "        Adapted from:\n",
@@ -218,18 +222,11 @@
     "\n",
     "        :param v_out: the value outputed for the state by NN\n",
     "        :param p_out: the policy outputed for the state by NN\n",
-    "        :param success: if the game terminated in a success\n",
-    "        :param steps: number of steps taken\n",
-    "        :param init_state: initial state\n",
-    "        :return: loss\n",
+    "        :param v_target: target value output\n",
+    "        :return: total loss\n",
     "        \"\"\"\n",
-    "        loss = steps\n",
-    "        if success:\n",
-    "            loss -= torch.linalg.norm(init_state)\n",
-    "        loss += torch.square(v_out - int(success)).sum()\n",
-    "        loss += torch.dot(p_sampled, torch.log(p_out))\n",
-    "        # if torch.sum(torch.isnan(loss)) >= 1:\n",
-    "        #     print(\"v_out:\", v_out, \"\\tp_sampled:\", p_sampled, \"\\tp_out:\",p_out)\n",
+    "        loss = self.v_loss_fn(v_out, v_target)\n",
+    "        loss += self.p_loss_fn(p_out, p_target)\n",
     "        return loss\n",
     "\n",
     "\n",
@@ -249,7 +246,7 @@
     "            nn.ReLU(),\n",
     "            nn.Linear(16, 1+n_actions),\n",
     "        )\n",
-    "        self.value_activation = nn.Sigmoid()\n",
+    "        self.value_activation = nn.ReLU()\n",
     "        self.policy_activation = nn.Softmax(dim=0)\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -258,17 +255,12 @@
     "        # value = self.value_activation(x[0:1]).unsqueeze(0)\n",
     "        value = x[0:1].reshape((1,1))\n",
     "        policy = torch.clamp(self.policy_activation(x[1:]).unsqueeze(0),min=1e-8,max=1-(1e-8))\n",
-    "        return torch.cat((value, policy), dim=1)\n",
-    "\n",
-    "\n",
-    "            \n",
-    "        \n",
-    "    "
+    "        return torch.cat((value, policy), dim=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "id": "f19bdb93248565c7",
    "metadata": {
     "collapsed": false
@@ -278,16 +270,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 10 \t\tLoss: 3175.7529296875\n",
-      "Epoch: 20 \t\tLoss: 8.311153411865234\n",
-      "Epoch: 30 \t\tLoss: 10.586368560791016\n",
-      "Epoch: 40 \t\tLoss: 15.929838180541992\n",
-      "Epoch: 50 \t\tLoss: 11.108878135681152\n",
-      "Epoch: 60 \t\tLoss: 18.10944366455078\n",
-      "Epoch: 70 \t\tLoss: 76.73344421386719\n",
-      "Epoch: 80 \t\tLoss: 19.893447875976562\n",
-      "Epoch: 90 \t\tLoss: 18156.896484375\n",
-      "Epoch: 100 \t\tLoss: 25.589523315429688\n"
+      "Epoch: 10 \t\tLoss: 54.74269485473633\n",
+      "Epoch: 20 \t\tLoss: 50.58513259887695\n",
+      "Epoch: 30 \t\tLoss: 49.751129150390625\n",
+      "Epoch: 40 \t\tLoss: 46.276458740234375\n",
+      "Epoch: 50 \t\tLoss: 54.80223846435547\n",
+      "Epoch: 60 \t\tLoss: 64.13318634033203\n",
+      "Epoch: 70 \t\tLoss: 62.014610290527344\n",
+      "Epoch: 80 \t\tLoss: 9.278467178344727\n",
+      "Epoch: 90 \t\tLoss: 67.35565185546875\n",
+      "Epoch: 100 \t\tLoss: 43.44841384887695\n",
+      "Epoch: 110 \t\tLoss: 35.364723205566406\n",
+      "Epoch: 120 \t\tLoss: 3.2786407470703125\n",
+      "Epoch: 130 \t\tLoss: 36.24876022338867\n",
+      "Epoch: 140 \t\tLoss: 11.764684677124023\n",
+      "Epoch: 150 \t\tLoss: 20.220333099365234\n",
+      "Epoch: 160 \t\tLoss: 4.632877349853516\n",
+      "Epoch: 170 \t\tLoss: 23.365034103393555\n",
+      "Epoch: 180 \t\tLoss: 11.82321834564209\n",
+      "Epoch: 190 \t\tLoss: 1.686532735824585\n",
+      "Epoch: 200 \t\tLoss: 0.9832583665847778\n",
+      "Epoch: 210 \t\tLoss: 0.677190899848938\n",
+      "Epoch: 220 \t\tLoss: 2.264025926589966\n",
+      "Epoch: 230 \t\tLoss: 2.083085060119629\n",
+      "Epoch: 240 \t\tLoss: 10.597112655639648\n",
+      "Epoch: 250 \t\tLoss: 1.1011523008346558\n",
+      "Epoch: 260 \t\tLoss: 4.564368724822998\n",
+      "Epoch: 270 \t\tLoss: 36.44187545776367\n",
+      "Epoch: 280 \t\tLoss: 7.741487979888916\n",
+      "Epoch: 290 \t\tLoss: 3.890462875366211\n",
+      "Epoch: 300 \t\tLoss: 5.331943035125732\n",
+      "Epoch: 310 \t\tLoss: 3.3984603881835938\n",
+      "Epoch: 320 \t\tLoss: 80.34092712402344\n",
+      "Epoch: 330 \t\tLoss: 9.179163932800293\n",
+      "Epoch: 340 \t\tLoss: 2.490076780319214\n",
+      "Epoch: 350 \t\tLoss: 44.453590393066406\n",
+      "Epoch: 360 \t\tLoss: 24.72675132751465\n",
+      "Epoch: 370 \t\tLoss: 1.1029248237609863\n",
+      "Epoch: 380 \t\tLoss: 0.6987188458442688\n",
+      "Epoch: 390 \t\tLoss: 38.114933013916016\n",
+      "Epoch: 400 \t\tLoss: 5.196382522583008\n",
+      "Epoch: 410 \t\tLoss: 27.60230255126953\n",
+      "Epoch: 420 \t\tLoss: 1.3973711729049683\n",
+      "Epoch: 430 \t\tLoss: 12.235474586486816\n",
+      "Epoch: 440 \t\tLoss: 50.29337692260742\n",
+      "Epoch: 450 \t\tLoss: 24.683687210083008\n",
+      "Epoch: 460 \t\tLoss: 42.109588623046875\n",
+      "Epoch: 470 \t\tLoss: 0.7735714316368103\n",
+      "Epoch: 480 \t\tLoss: 17.119844436645508\n",
+      "Epoch: 490 \t\tLoss: 3.0917787551879883\n",
+      "Epoch: 500 \t\tLoss: 43.19049835205078\n"
      ]
     }
    ],
@@ -302,10 +334,7 @@
     "\n",
     "value_NN = ValueNN(len(k_actions))\n",
     "loss_fn = Loss()\n",
-    "optimizer = optim.SGD(value_NN.parameters(), lr=0.001)\n",
-    "\n",
-    "\n",
-    "\n",
+    "optimizer = optim.Adam(value_NN.parameters(), lr=0.0001)\n",
     "\n",
     "def gen_start_state_2a(limit):\n",
     "    return torch.round(torch.rand((1, 2)) * limit + 1).float()\n",
@@ -329,10 +358,10 @@
     "        mcts.run(start_node, comp_limit=k_comp_limit)\n",
     "\n",
     "        # get attributes of game just played\n",
-    "        steps = mcts.max_depth\n",
-    "        success = mcts.terminal is not None\n",
-    "        if success:\n",
-    "            steps = mcts.terminal.depth\n",
+    "        v_out = start_node.subtree_value\n",
+    "        v_target = -mcts.max_depth\n",
+    "        if mcts.terminal is not None:\n",
+    "            v_target = -mcts.terminal.depth + torch.linalg.norm(start)\n",
     "\n",
     "        visits = []\n",
     "        for i in start_node.children:\n",
@@ -343,21 +372,21 @@
     "        visits = torch.tensor(visits, dtype=torch.float)\n",
     "        p_sampled = visits / torch.sum(visits)\n",
     "        \n",
-    "        loss = loss_fn(start_node.subtree_value, policy, p_sampled, success, steps, start)\n",
+    "        loss = loss_fn(v_out, torch.tensor(v_target,dtype=v_out.dtype), policy.flatten(), p_sampled.flatten())\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
     "        if (t+1) % 10 == 0:\n",
     "            print(\"Epoch:\", t+1,\"\\t\\tLoss:\",loss.item())\n",
-    "    torch.save(value_NN.state_dict(), \"deep_mcts_weights.pth\")\n",
+    "    # torch.save(value_NN.state_dict(), \"deep_mcts_weights.pth\")\n",
     "\n",
-    "train(100)\n",
+    "train(500)\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "c191e6c845a0bd24",
    "metadata": {
     "ExecuteTime": {
@@ -389,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "1368c1aa3c071299",
    "metadata": {
     "ExecuteTime": {
@@ -409,7 +438,11 @@
     "    for i in range(len(x)):\n",
     "        state = torch.tensor(x[i]).unsqueeze(0)\n",
     "        rv = value_NN(state).flatten()[1:]                      # take the move distribution given by NN\n",
-    "        rv = rv.multinomial(num_samples=1, replacement=True)    # sample from the move distribution\n",
+    "\n",
+    "        # todo pick one way to select\n",
+    "        # rv = rv.multinomial(num_samples=1, replacement=True)    # sample from the move distribution\n",
+    "        rv = torch.argmax(rv)                                   # todo maybe just sample randomly?\n",
+    "\n",
     "        if rv == y[i]:\n",
     "            correct += 1\n",
     "        guess_dist[rv] += 1\n",
@@ -434,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "7d034573cc3f5050",
    "metadata": {
     "ExecuteTime": {
@@ -453,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "id": "caa3d0f193cdda2a",
    "metadata": {
     "collapsed": false
@@ -463,7 +496,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/t9/gxb6q8zj21dff090q066td740000gn/T/ipykernel_3543/52056509.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/t9/gxb6q8zj21dff090q066td740000gn/T/ipykernel_2763/1532502908.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  state = torch.tensor(x[i]).unsqueeze(0)\n"
      ]
     },
@@ -471,8 +504,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.49\n",
-      "Guess Distribution: [0, 2000]\n"
+      "Test Accuracy: 0.4895\n",
+      "Guess Distribution: [1, 1999]\n"
      ]
     }
    ],
@@ -538,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.0.0"
   }
  },
  "nbformat": 4,
