--- a/Euclidean/Alex/deep_mcts.ipynb
+++ b/Euclidean/Alex/deep_mcts.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "438fdf1c04168299",
    "metadata": {
     "collapsed": false
@@ -232,94 +232,121 @@
     "\n",
     "        \n",
     "class ValueNN(nn.Module):\n",
-    "    def __init__(self, n_actions):\n",
+    "    def __init__(self):\n",
     "        super(ValueNN, self).__init__()\n",
     "        self.flatten = nn.Flatten()\n",
     "        self.stack = nn.Sequential(\n",
     "            nn.Linear(2, 128),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(128, 128),\n",
-    "            nn.ReLU(),\n",
     "            nn.Linear(128, 64),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(64, 16),\n",
     "            nn.ReLU(),\n",
-    "            nn.Linear(16, 1+n_actions),\n",
+    "            nn.Linear(16, 1),\n",
     "        )\n",
     "        self.value_activation = nn.ReLU()\n",
-    "        self.policy_activation = nn.Softmax(dim=0)\n",
     "        \n",
     "    def forward(self, x):\n",
     "        x = self.flatten(x)\n",
     "        x = self.stack(x).flatten()\n",
     "        # value = self.value_activation(x[0:1]).unsqueeze(0)\n",
     "        value = x[0:1].reshape((1,1))\n",
-    "        policy = torch.clamp(self.policy_activation(x[1:]).unsqueeze(0),min=1e-8,max=1-(1e-8))\n",
-    "        return torch.cat((value, policy), dim=1)"
+    "        return value\n",
+    "\n",
+    "\n",
+    "class PolicyNN(nn.Module):\n",
+    "    def __init__(self, n_actions):\n",
+    "        super(PolicyNN, self).__init__()\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        self.stack = nn.Sequential(\n",
+    "            nn.Linear(2, 128),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(128, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64, 16),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(16, n_actions),\n",
+    "        )\n",
+    "        self.policy_activation = nn.Softmax(dim=0)\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        x = self.flatten(x)\n",
+    "        x = self.policy_activation(self.stack(x).flatten())\n",
+    "        # value = self.value_activation(x[0:1]).unsqueeze(0)\n",
+    "        policy = torch.clamp(x.unsqueeze(0),min=1e-8,max=1-(1e-8))\n",
+    "        return policy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "f19bdb93248565c7",
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torch/nn/modules/loss.py:536: UserWarning: Using a target size (torch.Size([])) that is different to the input size (torch.Size([1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 10 \t\tLoss: 54.74269485473633\n",
-      "Epoch: 20 \t\tLoss: 50.58513259887695\n",
-      "Epoch: 30 \t\tLoss: 49.751129150390625\n",
-      "Epoch: 40 \t\tLoss: 46.276458740234375\n",
-      "Epoch: 50 \t\tLoss: 54.80223846435547\n",
-      "Epoch: 60 \t\tLoss: 64.13318634033203\n",
-      "Epoch: 70 \t\tLoss: 62.014610290527344\n",
-      "Epoch: 80 \t\tLoss: 9.278467178344727\n",
-      "Epoch: 90 \t\tLoss: 67.35565185546875\n",
-      "Epoch: 100 \t\tLoss: 43.44841384887695\n",
-      "Epoch: 110 \t\tLoss: 35.364723205566406\n",
-      "Epoch: 120 \t\tLoss: 3.2786407470703125\n",
-      "Epoch: 130 \t\tLoss: 36.24876022338867\n",
-      "Epoch: 140 \t\tLoss: 11.764684677124023\n",
-      "Epoch: 150 \t\tLoss: 20.220333099365234\n",
-      "Epoch: 160 \t\tLoss: 4.632877349853516\n",
-      "Epoch: 170 \t\tLoss: 23.365034103393555\n",
-      "Epoch: 180 \t\tLoss: 11.82321834564209\n",
-      "Epoch: 190 \t\tLoss: 1.686532735824585\n",
-      "Epoch: 200 \t\tLoss: 0.9832583665847778\n",
-      "Epoch: 210 \t\tLoss: 0.677190899848938\n",
-      "Epoch: 220 \t\tLoss: 2.264025926589966\n",
-      "Epoch: 230 \t\tLoss: 2.083085060119629\n",
-      "Epoch: 240 \t\tLoss: 10.597112655639648\n",
-      "Epoch: 250 \t\tLoss: 1.1011523008346558\n",
-      "Epoch: 260 \t\tLoss: 4.564368724822998\n",
-      "Epoch: 270 \t\tLoss: 36.44187545776367\n",
-      "Epoch: 280 \t\tLoss: 7.741487979888916\n",
-      "Epoch: 290 \t\tLoss: 3.890462875366211\n",
-      "Epoch: 300 \t\tLoss: 5.331943035125732\n",
-      "Epoch: 310 \t\tLoss: 3.3984603881835938\n",
-      "Epoch: 320 \t\tLoss: 80.34092712402344\n",
-      "Epoch: 330 \t\tLoss: 9.179163932800293\n",
-      "Epoch: 340 \t\tLoss: 2.490076780319214\n",
-      "Epoch: 350 \t\tLoss: 44.453590393066406\n",
-      "Epoch: 360 \t\tLoss: 24.72675132751465\n",
-      "Epoch: 370 \t\tLoss: 1.1029248237609863\n",
-      "Epoch: 380 \t\tLoss: 0.6987188458442688\n",
-      "Epoch: 390 \t\tLoss: 38.114933013916016\n",
-      "Epoch: 400 \t\tLoss: 5.196382522583008\n",
-      "Epoch: 410 \t\tLoss: 27.60230255126953\n",
-      "Epoch: 420 \t\tLoss: 1.3973711729049683\n",
-      "Epoch: 430 \t\tLoss: 12.235474586486816\n",
-      "Epoch: 440 \t\tLoss: 50.29337692260742\n",
-      "Epoch: 450 \t\tLoss: 24.683687210083008\n",
-      "Epoch: 460 \t\tLoss: 42.109588623046875\n",
-      "Epoch: 470 \t\tLoss: 0.7735714316368103\n",
-      "Epoch: 480 \t\tLoss: 17.119844436645508\n",
-      "Epoch: 490 \t\tLoss: 3.0917787551879883\n",
-      "Epoch: 500 \t\tLoss: 43.19049835205078\n"
+      "Epoch: 10 \t\tLoss: 427.5707092285156\n",
+      "Epoch: 20 \t\tLoss: 51.128414154052734\n",
+      "Epoch: 30 \t\tLoss: 49.24557876586914\n",
+      "Epoch: 40 \t\tLoss: 47.562469482421875\n",
+      "Epoch: 50 \t\tLoss: 48.49505615234375\n",
+      "Epoch: 60 \t\tLoss: 48.519386291503906\n",
+      "Epoch: 70 \t\tLoss: 67.93046569824219\n",
+      "Epoch: 80 \t\tLoss: 83.16307067871094\n",
+      "Epoch: 90 \t\tLoss: 90.97821044921875\n",
+      "Epoch: 100 \t\tLoss: 101.3854751586914\n",
+      "Epoch: 110 \t\tLoss: 115.19110870361328\n",
+      "Epoch: 120 \t\tLoss: 98.37451934814453\n",
+      "Epoch: 130 \t\tLoss: 65.6265640258789\n",
+      "Epoch: 140 \t\tLoss: 207.3758544921875\n",
+      "Epoch: 150 \t\tLoss: 69.74079895019531\n",
+      "Epoch: 160 \t\tLoss: 55.3030891418457\n",
+      "Epoch: 170 \t\tLoss: 33.931697845458984\n",
+      "Epoch: 180 \t\tLoss: 26.16014289855957\n",
+      "Epoch: 190 \t\tLoss: 25.88953399658203\n",
+      "Epoch: 200 \t\tLoss: 15.620043754577637\n",
+      "Epoch: 210 \t\tLoss: 166.25595092773438\n",
+      "Epoch: 220 \t\tLoss: 25.160869598388672\n",
+      "Epoch: 230 \t\tLoss: 19.127498626708984\n",
+      "Epoch: 240 \t\tLoss: 6.065675735473633\n",
+      "Epoch: 250 \t\tLoss: 24.917194366455078\n",
+      "Epoch: 260 \t\tLoss: 55.45851516723633\n",
+      "Epoch: 270 \t\tLoss: 27.791473388671875\n",
+      "Epoch: 280 \t\tLoss: 14.547812461853027\n",
+      "Epoch: 290 \t\tLoss: 8.943713188171387\n",
+      "Epoch: 300 \t\tLoss: 0.7443438768386841\n",
+      "Epoch: 310 \t\tLoss: 5.249520301818848\n",
+      "Epoch: 320 \t\tLoss: 4.472096920013428\n",
+      "Epoch: 330 \t\tLoss: 0.36160537600517273\n",
+      "Epoch: 340 \t\tLoss: 16.101825714111328\n",
+      "Epoch: 350 \t\tLoss: 358.6707458496094\n",
+      "Epoch: 360 \t\tLoss: 6.98356294631958\n",
+      "Epoch: 370 \t\tLoss: 3.118889093399048\n",
+      "Epoch: 380 \t\tLoss: 1.1329046487808228\n",
+      "Epoch: 390 \t\tLoss: 29.242324829101562\n",
+      "Epoch: 400 \t\tLoss: 42.916961669921875\n",
+      "Epoch: 410 \t\tLoss: 30.396560668945312\n",
+      "Epoch: 420 \t\tLoss: 2.1808290481567383\n",
+      "Epoch: 430 \t\tLoss: 4.347366809844971\n",
+      "Epoch: 440 \t\tLoss: 0.43777742981910706\n",
+      "Epoch: 450 \t\tLoss: 27.283782958984375\n",
+      "Epoch: 460 \t\tLoss: 2.066505193710327\n",
+      "Epoch: 470 \t\tLoss: 8.352314949035645\n",
+      "Epoch: 480 \t\tLoss: 2.3691041469573975\n",
+      "Epoch: 490 \t\tLoss: 0.35015884041786194\n",
+      "Epoch: 500 \t\tLoss: 20.191959381103516\n"
      ]
     }
    ],
@@ -332,25 +359,27 @@
     "\n",
     "k_actions = (a_subtract, a_swap)\n",
     "\n",
-    "value_NN = ValueNN(len(k_actions))\n",
+    "value_fn = ValueNN()\n",
+    "policy_fn = PolicyNN(len(k_actions))\n",
     "loss_fn = Loss()\n",
-    "optimizer = optim.Adam(value_NN.parameters(), lr=0.0001)\n",
+    "value_optim = optim.Adam(value_fn.parameters(), lr=0.0001)\n",
+    "policy_optim = optim.Adam(policy_fn.parameters(), lr=0.0001)\n",
     "\n",
     "def gen_start_state_2a(limit):\n",
     "    return torch.round(torch.rand((1, 2)) * limit + 1).float()\n",
     "\n",
     "def train(epochs):\n",
     "    for t in range(epochs):\n",
-    "        optimizer.zero_grad()\n",
+    "        value_optim.zero_grad()\n",
+    "        policy_optim.zero_grad()\n",
     "        # Repeat the following:\n",
     "        # 1) run the NN on some random initial state\n",
     "        # 2) update the NN based off performance in that game\n",
-    "        mcts = MCTS(k_actions, C=k_C, weight=1, value_fn=value_NN)\n",
+    "        mcts = MCTS(k_actions, C=k_C, weight=1, value_fn=value_fn)\n",
     "        start = gen_start_state_2a(k_state_upper_lim)\n",
     "\n",
-    "        rv = mcts.value_fn(start).flatten()\n",
-    "        value = rv[0]\n",
-    "        policy = rv[1:]\n",
+    "        value = mcts.value_fn(start).flatten()\n",
+    "        policy = policy_fn(start).flatten()\n",
     "\n",
     "        start_node = Node(None, start, len(k_actions), value, 0)\n",
     "\n",
@@ -374,11 +403,11 @@
     "        \n",
     "        loss = loss_fn(v_out, torch.tensor(v_target,dtype=v_out.dtype), policy.flatten(), p_sampled.flatten())\n",
     "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "        value_optim.step()\n",
+    "        policy_optim.step()\n",
     "\n",
     "        if (t+1) % 10 == 0:\n",
     "            print(\"Epoch:\", t+1,\"\\t\\tLoss:\",loss.item())\n",
-    "    # torch.save(value_NN.state_dict(), \"deep_mcts_weights.pth\")\n",
     "\n",
     "train(500)\n",
     "            "
@@ -386,7 +415,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save = False\n",
+    "if save:\n",
+    "    torch.save(value_fn.state_dict(), \"deep_mcts_v_weights.pth\")\n",
+    "    torch.save(policy_fn.state_dict(), \"deep_mcts_p_weights.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "c191e6c845a0bd24",
    "metadata": {
     "ExecuteTime": {
@@ -401,15 +442,13 @@
     "    x = torch.tensor(np.loadtxt(fname, delimiter=\",\"), dtype=torch.float)\n",
     "    return x[:,:-1], x[:,-1]\n",
     "\n",
-    "def plot_db(mcts, actions, comp_limit, ranges):\n",
+    "def plot_db(policy_fn, actions, comp_limit, ranges):\n",
     "    X = ranges[0]\n",
     "    Y = ranges[1]\n",
     "    action_plot = [[] * actions]\n",
     "    for i in X:\n",
     "        for j in Y:\n",
-    "            result = mcts.run(\n",
-    "                Node(None, (i,j), n_children=len(actions),value=value_NN([i,j])), comp_limit=comp_limit)\n",
-    "            action_plot[result].append((i,j))\n",
+    "            action_plot[policy_fn(torch.tensor(i,j))].append((i,j))\n",
     "    for i in range(len(action_plot)):\n",
     "        action = np.array(action_plot[i])\n",
     "        plt.scatter(action[:,0], action[:,1], color=(\"C\"+str(i)), label=action)\n",
@@ -418,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "1368c1aa3c071299",
    "metadata": {
     "ExecuteTime": {
@@ -429,7 +468,7 @@
    },
    "outputs": [],
    "source": [
-    "def test(x, y, C, value_fn, weight=1., comp_limit=10, actions=(a_subtract, a_swap), zero_index=False, dbs=None):\n",
+    "def test(x, y, C, policy_fn, weight=1., comp_limit=10, actions=(a_subtract, a_swap), zero_index=False, dbs=None):\n",
     "    correct = 0\n",
     "    mcts = MCTS(actions, C, weight, value_fn)\n",
     "    guess_dist = [0] * len(actions)\n",
@@ -437,11 +476,11 @@
     "        y = y - np.ones(len(y))\n",
     "    for i in range(len(x)):\n",
     "        state = torch.tensor(x[i]).unsqueeze(0)\n",
-    "        rv = value_NN(state).flatten()[1:]                      # take the move distribution given by NN\n",
+    "        rv = policy_fn(state).flatten()                      # take the move distribution given by NN\n",
     "\n",
     "        # todo pick one way to select\n",
     "        # rv = rv.multinomial(num_samples=1, replacement=True)    # sample from the move distribution\n",
-    "        rv = torch.argmax(rv)                                   # todo maybe just sample randomly?\n",
+    "        rv = torch.argmax(rv)\n",
     "\n",
     "        if rv == y[i]:\n",
     "            correct += 1\n",
@@ -451,16 +490,16 @@
     "    # todo fix\n",
     "    # if dbs is not None:\n",
     "    #     # graphing decision boundary\n",
-    "    #     plot_db(mcts, actions, comp_limit, ranges=dbs)\n",
+    "    #     plot_db(policy_fn, actions, comp_limit, ranges=dbs)\n",
     "    return correct / len(x), guess_dist\n",
     "\n",
     "\n",
-    "def run_test(data_name, actions, C, value_fn, cases=100, lookahead=100, weight=1., zero_index=False, dbs=None):\n",
+    "def run_test(data_name, actions, C, policy_fn, cases=100, lookahead=100, weight=1., zero_index=False, dbs=None):\n",
     "    test_X, test_Y = get_data(data_name)\n",
     "    test_Y.reshape(-1, 1)\n",
     "\n",
     "    acc, guesses = test(test_X[:cases], test_Y[:cases],\n",
-    "                        C, value_fn, weight, comp_limit=lookahead, actions=actions, zero_index=zero_index, dbs=dbs)\n",
+    "                        C, policy_fn, weight, comp_limit=lookahead, actions=actions, zero_index=zero_index, dbs=dbs)\n",
     "    print(\"Test Accuracy:\", acc)\n",
     "    print(\"Guess Distribution:\", guesses)"
    ]
@@ -486,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "caa3d0f193cdda2a",
    "metadata": {
     "collapsed": false
@@ -496,7 +535,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/t9/gxb6q8zj21dff090q066td740000gn/T/ipykernel_2763/1532502908.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/t9/gxb6q8zj21dff090q066td740000gn/T/ipykernel_2763/1659889107.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  state = torch.tensor(x[i]).unsqueeze(0)\n"
      ]
     },
@@ -504,8 +543,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.4895\n",
-      "Guess Distribution: [1, 1999]\n"
+      "Test Accuracy: 0.9905\n",
+      "Guess Distribution: [1039, 961]\n"
      ]
     }
    ],
@@ -515,8 +554,8 @@
     "db2 = np.linspace(2, k_dbound_size, k_dbound_size - 1)\n",
     "two_dbs =[db2, db2]\n",
     "\n",
-    "run_test(dual_file, [a_subtract, a_swap], C=k_C, value_fn=value_NN, cases=k_cases, lookahead=10, dbs=two_dbs)\n",
-    "# ~90% accuracy"
+    "run_test(dual_file, [a_subtract, a_swap], C=k_C, policy_fn=policy_fn, cases=k_cases, lookahead=10, dbs=two_dbs)\n",
+    "# ~99% accuracy"
    ]
   },
   {
