refactor nn weights

--- a/Euclidean/Alex/supervised_simple.ipynb
+++ b/Euclidean/Alex/supervised_simple.ipynb
@@ -5,11 +5,11 @@
    "execution_count": 364,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-09-22T19:17:10.998919Z",
      "start_time": "2023-09-22T19:17:10.989794Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -23,6 +23,14 @@
   {
    "cell_type": "code",
    "execution_count": 365,
+   "id": "186f9e627578f761",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-22T19:17:11.006902Z",
+     "start_time": "2023-09-22T19:17:11.000832Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "GENERATE_DATA = False\n",
@@ -66,19 +74,19 @@
     "    gen_example_data(fname, NUM_TRAIN_DATA)\n",
     "    fname = \"test_data/test.csv\"\n",
     "    gen_example_data(fname, int(NUM_TRAIN_DATA * RATIO_TEST_TRAIN))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-22T19:17:11.006902Z",
-     "start_time": "2023-09-22T19:17:11.000832Z"
-    }
-   },
-   "id": "186f9e627578f761"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 366,
+   "id": "6bb392d67e3cdd83",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-22T19:17:11.019689Z",
+     "start_time": "2023-09-22T19:17:11.008491Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "class NN(nn.Module):\n",
@@ -104,23 +112,31 @@
     "        # return x\n",
     "        return self.activation(x)\n",
     "    "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-22T19:17:11.019689Z",
-     "start_time": "2023-09-22T19:17:11.008491Z"
-    }
-   },
-   "id": "6bb392d67e3cdd83"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 367,
+   "id": "a84b0db3f702923f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-22T19:17:11.039203Z",
+     "start_time": "2023-09-22T19:17:11.014784Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[0.],\n        [1.],\n        [1.],\n        ...,\n        [1.],\n        [1.],\n        [0.]])"
+      "text/plain": [
+       "tensor([[0.],\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        ...,\n",
+       "        [1.],\n",
+       "        [1.],\n",
+       "        [0.]])"
+      ]
      },
      "execution_count": 367,
      "metadata": {},
@@ -137,19 +153,19 @@
     "\n",
     "train_Y.reshape(-1, 1)\n",
     "test_Y.reshape(-1, 1)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-22T19:17:11.039203Z",
-     "start_time": "2023-09-22T19:17:11.014784Z"
-    }
-   },
-   "id": "a84b0db3f702923f"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 368,
+   "id": "6d13c6ef5d5314e9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-22T19:17:11.039336Z",
+     "start_time": "2023-09-22T19:17:11.030905Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "EPOCHS = int(50)\n",
@@ -186,19 +202,19 @@
     "def test(x, y):\n",
     "    with torch.no_grad():\n",
     "        return torch.count_nonzero(torch.eq(model(x).round(), y.unsqueeze(dim=1))) / len(y)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-22T19:17:11.039336Z",
-     "start_time": "2023-09-22T19:17:11.030905Z"
-    }
-   },
-   "id": "6d13c6ef5d5314e9"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 369,
+   "id": "bfb442b16ea9c786",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-22T19:18:17.021829Z",
+     "start_time": "2023-09-22T19:17:11.036755Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -214,19 +230,19 @@
    ],
    "source": [
     "train(train_X, train_Y) "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-22T19:18:17.021829Z",
-     "start_time": "2023-09-22T19:17:11.036755Z"
-    }
-   },
-   "id": "bfb442b16ea9c786"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 371,
+   "id": "a112d1d0a77bf25d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-22T19:18:17.063949Z",
+     "start_time": "2023-09-22T19:18:17.054081Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -239,33 +255,25 @@
    "source": [
     "with torch.no_grad():\n",
     "    print(\"Accuracy\", test(test_X, test_Y).item())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-22T19:18:17.063949Z",
-     "start_time": "2023-09-22T19:18:17.054081Z"
-    }
-   },
-   "id": "a112d1d0a77bf25d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 372,
+   "id": "faf48852a37a228c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-22T19:18:17.071370Z",
+     "start_time": "2023-09-22T19:18:17.060932Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "SAVE_WEIGHTS = False\n",
     "if SAVE_WEIGHTS:\n",
-    "    torch.save(model.state_dict(), \"supervised_simple_weights.pth\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-22T19:18:17.071370Z",
-     "start_time": "2023-09-22T19:18:17.060932Z"
-    }
-   },
-   "id": "faf48852a37a228c"
+    "    torch.save(model.state_dict(), \"weights/supervised_simple_weights.pth\")"
+   ]
   }
  ],
  "metadata": {
