refactor train fn to be more flexible

--- a/Euclidean/Alex/deep_mcts.ipynb
+++ b/Euclidean/Alex/deep_mcts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 93,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 94,
    "id": "d12017b9641b3200",
    "metadata": {
     "ExecuteTime": {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 95,
    "id": "8031c754a4dbbeae",
    "metadata": {
     "ExecuteTime": {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 96,
    "id": "438fdf1c04168299",
    "metadata": {
     "collapsed": false
@@ -279,112 +279,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 97,
    "id": "f19bdb93248565c7",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/torch/nn/modules/loss.py:536: UserWarning: Using a target size (torch.Size([])) that is different to the input size (torch.Size([1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 10 \t\tLoss: 427.5707092285156\n",
-      "Epoch: 20 \t\tLoss: 51.128414154052734\n",
-      "Epoch: 30 \t\tLoss: 49.24557876586914\n",
-      "Epoch: 40 \t\tLoss: 47.562469482421875\n",
-      "Epoch: 50 \t\tLoss: 48.49505615234375\n",
-      "Epoch: 60 \t\tLoss: 48.519386291503906\n",
-      "Epoch: 70 \t\tLoss: 67.93046569824219\n",
-      "Epoch: 80 \t\tLoss: 83.16307067871094\n",
-      "Epoch: 90 \t\tLoss: 90.97821044921875\n",
-      "Epoch: 100 \t\tLoss: 101.3854751586914\n",
-      "Epoch: 110 \t\tLoss: 115.19110870361328\n",
-      "Epoch: 120 \t\tLoss: 98.37451934814453\n",
-      "Epoch: 130 \t\tLoss: 65.6265640258789\n",
-      "Epoch: 140 \t\tLoss: 207.3758544921875\n",
-      "Epoch: 150 \t\tLoss: 69.74079895019531\n",
-      "Epoch: 160 \t\tLoss: 55.3030891418457\n",
-      "Epoch: 170 \t\tLoss: 33.931697845458984\n",
-      "Epoch: 180 \t\tLoss: 26.16014289855957\n",
-      "Epoch: 190 \t\tLoss: 25.88953399658203\n",
-      "Epoch: 200 \t\tLoss: 15.620043754577637\n",
-      "Epoch: 210 \t\tLoss: 166.25595092773438\n",
-      "Epoch: 220 \t\tLoss: 25.160869598388672\n",
-      "Epoch: 230 \t\tLoss: 19.127498626708984\n",
-      "Epoch: 240 \t\tLoss: 6.065675735473633\n",
-      "Epoch: 250 \t\tLoss: 24.917194366455078\n",
-      "Epoch: 260 \t\tLoss: 55.45851516723633\n",
-      "Epoch: 270 \t\tLoss: 27.791473388671875\n",
-      "Epoch: 280 \t\tLoss: 14.547812461853027\n",
-      "Epoch: 290 \t\tLoss: 8.943713188171387\n",
-      "Epoch: 300 \t\tLoss: 0.7443438768386841\n",
-      "Epoch: 310 \t\tLoss: 5.249520301818848\n",
-      "Epoch: 320 \t\tLoss: 4.472096920013428\n",
-      "Epoch: 330 \t\tLoss: 0.36160537600517273\n",
-      "Epoch: 340 \t\tLoss: 16.101825714111328\n",
-      "Epoch: 350 \t\tLoss: 358.6707458496094\n",
-      "Epoch: 360 \t\tLoss: 6.98356294631958\n",
-      "Epoch: 370 \t\tLoss: 3.118889093399048\n",
-      "Epoch: 380 \t\tLoss: 1.1329046487808228\n",
-      "Epoch: 390 \t\tLoss: 29.242324829101562\n",
-      "Epoch: 400 \t\tLoss: 42.916961669921875\n",
-      "Epoch: 410 \t\tLoss: 30.396560668945312\n",
-      "Epoch: 420 \t\tLoss: 2.1808290481567383\n",
-      "Epoch: 430 \t\tLoss: 4.347366809844971\n",
-      "Epoch: 440 \t\tLoss: 0.43777742981910706\n",
-      "Epoch: 450 \t\tLoss: 27.283782958984375\n",
-      "Epoch: 460 \t\tLoss: 2.066505193710327\n",
-      "Epoch: 470 \t\tLoss: 8.352314949035645\n",
-      "Epoch: 480 \t\tLoss: 2.3691041469573975\n",
-      "Epoch: 490 \t\tLoss: 0.35015884041786194\n",
-      "Epoch: 500 \t\tLoss: 20.191959381103516\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
-    "k_state_upper_lim = 30 # arbitrary\n",
     "k_C = 1 / math.sqrt(2)\n",
-    "k_comp_limit = int(k_state_upper_lim ** (3/2))\n",
     "\n",
-    "k_actions = (a_subtract, a_swap)\n",
-    "\n",
-    "value_fn = ValueNN()\n",
-    "policy_fn = PolicyNN(len(k_actions))\n",
     "loss_fn = Loss()\n",
-    "value_optim = optim.Adam(value_fn.parameters(), lr=0.0001)\n",
-    "policy_optim = optim.Adam(policy_fn.parameters(), lr=0.0001)\n",
     "\n",
-    "def gen_start_state_2a(limit):\n",
-    "    return torch.round(torch.rand((1, 2)) * limit + 1).float()\n",
-    "\n",
-    "def train(epochs):\n",
+    "def train(epochs, actions, policy_fn, value_fn, optimizers, rand_start_state_fn, comp_limit):\n",
     "    for t in range(epochs):\n",
-    "        value_optim.zero_grad()\n",
-    "        policy_optim.zero_grad()\n",
+    "        for o in optimizers:\n",
+    "            o.zero_grad()\n",
     "        # Repeat the following:\n",
     "        # 1) run the NN on some random initial state\n",
     "        # 2) update the NN based off performance in that game\n",
-    "        mcts = MCTS(k_actions, C=k_C, weight=1, value_fn=value_fn)\n",
-    "        start = gen_start_state_2a(k_state_upper_lim)\n",
+    "        mcts = MCTS(actions, C=k_C, weight=1, value_fn=value_fn)\n",
+    "        start = rand_start_state_fn()\n",
     "\n",
     "        value = mcts.value_fn(start).flatten()\n",
     "        policy = policy_fn(start).flatten()\n",
     "\n",
-    "        start_node = Node(None, start, len(k_actions), value, 0)\n",
+    "        start_node = Node(None, start, len(actions), value, 0)\n",
     "\n",
     "        # play out a game\n",
-    "        mcts.run(start_node, comp_limit=k_comp_limit)\n",
+    "        mcts.run(start_node, comp_limit=comp_limit)\n",
     "\n",
     "        # get attributes of game just played\n",
     "        v_out = start_node.subtree_value\n",
@@ -403,14 +327,49 @@
     "        \n",
     "        loss = loss_fn(v_out, torch.tensor(v_target,dtype=v_out.dtype), policy.flatten(), p_sampled.flatten())\n",
     "        loss.backward()\n",
-    "        value_optim.step()\n",
-    "        policy_optim.step()\n",
+    "        for o in optimizers:\n",
+    "            o.step()\n",
     "\n",
     "        if (t+1) % 10 == 0:\n",
-    "            print(\"Epoch:\", t+1,\"\\t\\tLoss:\",loss.item())\n",
+    "            print(\"Epoch:\", t+1,\"\\t\\tLoss:\",loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 10 \t\tLoss: 65.8193130493164\n",
+      "Epoch: 20 \t\tLoss: 42.127017974853516\n",
+      "Epoch: 30 \t\tLoss: 59.532718658447266\n",
+      "Epoch: 40 \t\tLoss: 48.38131332397461\n",
+      "Epoch: 50 \t\tLoss: 29.40606689453125\n",
+      "Epoch: 60 \t\tLoss: 44.74832534790039\n",
+      "Epoch: 70 \t\tLoss: 24.35161590576172\n",
+      "Epoch: 80 \t\tLoss: 25.03790855407715\n",
+      "Epoch: 90 \t\tLoss: 3.6419973373413086\n",
+      "Epoch: 100 \t\tLoss: 5.68751859664917\n"
+     ]
+    }
+   ],
+   "source": [
+    "k_comp_limit = int(k_state_upper_lim ** (3/2))\n",
+    "k_2actions = (a_subtract, a_swap)\n",
+    "value_fn_2 = ValueNN()\n",
+    "policy_fn_2 = PolicyNN(len(k_actions))\n",
+    "value_optim = optim.Adam(value_fn_2.parameters(), lr=0.0001)\n",
+    "policy_optim = optim.Adam(policy_fn_2.parameters(), lr=0.0001)\n",
+    "k_state_upper_lim = 30 # arbitrary\n",
     "\n",
-    "train(500)\n",
-    "            "
+    "def gen_start_state_2a():\n",
+    "    limit = k_state_upper_lim\n",
+    "    return torch.round(torch.rand((1, 2)) * limit + 1).float()\n",
+    "\n",
+    "train(epochs=100, actions=k_2actions, policy_fn=policy_fn_2, value_fn=value_fn_2, optimizers=[value_optim, policy_optim], rand_start_state_fn=gen_start_state_2a, comp_limit=k_comp_limit)"
    ]
   },
   {
@@ -427,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "id": "c191e6c845a0bd24",
    "metadata": {
     "ExecuteTime": {
@@ -460,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 100,
    "id": "1368c1aa3c071299",
    "metadata": {
     "ExecuteTime": {
@@ -502,31 +461,12 @@
     "    acc, guesses = test(test_X[:cases], test_Y[:cases],\n",
     "                        C, policy_fn, weight, comp_limit=lookahead, actions=actions, zero_index=zero_index, dbs=dbs)\n",
     "    print(\"Test Accuracy:\", acc)\n",
-    "    print(\"Guess Distribution:\", guesses)"
+    "    print(\"Guess Distribution:\", guesses)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "7d034573cc3f5050",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-06T02:45:36.106299Z",
-     "start_time": "2023-11-06T02:45:36.096467Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "k_C = 1 / math.sqrt(2)  # satisfies Hoeffding Ineq (Kocsis and Szepesvari)\n",
-    "k_cases = 2000\n",
-    "\n",
-    "k_dbound_size = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 101,
    "id": "caa3d0f193cdda2a",
    "metadata": {
     "collapsed": false
@@ -536,7 +476,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/t9/gxb6q8zj21dff090q066td740000gn/T/ipykernel_2763/1551777328.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/var/folders/t9/gxb6q8zj21dff090q066td740000gn/T/ipykernel_2763/1594351740.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  state = torch.tensor(x[i]).unsqueeze(0)\n"
      ]
     },
@@ -560,6 +500,9 @@
     }
    ],
    "source": [
+    "k_cases = 2000\n",
+    "k_dbound_size = 100\n",
+    "\n",
     "dual_file = \"test_data/test_simple.csv\"\n",
     "\n",
     "db2 = np.linspace(2, k_dbound_size, k_dbound_size - 1)\n",
