--- a/heisenberg_group/Data_Generation/generate_heisenberg_w_BFS.ipynb
+++ b/heisenberg_group/Data_Generation/generate_heisenberg_w_BFS.ipynb
@@ -382,7 +382,16 @@
    "cell_type": "code",
    "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# data = data.drop_duplicates(subset=['val1', 'val2', 'val3'])\n",
     "data.to_csv(\"../Data_Generation/Data_files/bfs_heisenberg_data.csv\", index=False)"
